flux/apps/base/taida-portfolio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: taida-portfolio
  namespace: taida-portfolio
spec:
  selector:
    app: taida-portfolio
  ports:
    - name: http
      port: 3000
      targetPort: http
